Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114539

QToolButton arrow clipped on screen with non-integer device pixel ratio

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.6.2, 6.7.0 FF
    • 6.5.1
    • None
    • Windows 10, 4K screen with a device pixel ratio of 1.5 (150% font size setting in Windows)
    • Windows
    • 3936d254c (dev), 62f32c7e1 (6.6), 74e8f673b (dev), 15ce2b8b7 (6.7), bbff35a34 (dev), 1d4d3cff1 (6.7)

      QToolButton arrow is clipped when shown on a screen with a non-integer device pixel ratio (at least under Windows).

       

      Attached is sample code to reproduce the problem and a screenshot.

      Note that the sample code produces a double arrow; this is due to QTBUG-100109.

      QTBUG-49762 might be related.

        1. QToolButtonArrowClippedOnNonIntegerDevicePixelRatio.cpp
          1 kB
          E Visser
        2. QToolButtonArrowClippedOnNonIntegerDevicePixelRatio.png
          3 kB
          E Visser
        3. toolbutton_after.png
          3 kB
          Christian Ehrlicher
        4. toolbutton_before.png
          4 kB
          Christian Ehrlicher
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            chehrlic Christian Ehrlicher
            ev E Visser
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: