QCommonStyle: Adjust painting arrows in high-dpi mode

PE_IndicatorArrowUp/Down/Left/Right was drawn using integer coordinates
for the three edges which lead to artifacts in high-dpi mode. Fix it by
using QPointF instead.

Fixes: QTBUG-114539
Change-Id: I03cbff2ef789e8cee0f3a0d84138d94516340669
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 3936d254ca0e7259cd97238c31df8413d03fd475)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>